--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootsrapcss/all.min.css">
+    <link rel="stylesheet" href="icons/all.min.css">
     <!-- <link rel="stylesheet" href="bootsrapcss/bootstrap.min.css"> -->
     <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
@@ -89,7 +89,7 @@
                     <!-- form section -->
                     <div class="flex2">
                         <!-- vhduiqfdhjxieo -->
-                        <div >
+                            <div >
                                 <form action="" >
                                     <div class="real">
                                         <span class="leftform">
@@ -124,6 +124,7 @@
                         </div>
                     </div>
                 </div>
+         </div>
                 
     </section>
     <!-- Newsletter section -->
