--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     <form action="" >
                                         <div class="real">
                                             <span class="leftform">
-                                            <input type="text" style="margin: 20px; padding:10px 50px 10px 5px" name="Your name" placeholder="Your Name">
+                                            <input  type="text" style="margin: 20px; padding:10px 50px 10px 5px" name="Your name" placeholder="Your Name">
                                             <input type="email" class="email" style="padding:10px 50px 10px 5px" name="Email" placeholder="Email">
                                             </span>
                                             <br>
@@ -109,7 +109,9 @@
                                             <div style="margin-left: 30px;" class="textarea">
                                                 <textarea name=""  cols="40" rows="10"></textarea>
                                             </div>
-                                            <input type="button" style="margin-left: 30px; margin-top:10px;color:red;" name="Send" value="Send" class="send">
+                                            <div>
+                                                    <input type="button" name="Send" value="Send" class="send">
+                                            </div>
                                         </div>
 
 
@@ -169,7 +171,7 @@
                 <p>Suppliers</p>
                 <p>FAQ</p>
             </div>
-            <div class="branch">
+            <div class="branch" >
                 <h2>Contact Us</h2>
                 <p><i class="fa-solid fa-home" style="color: white;"></i>    25 Astor PL,NY 100003,USA</p>
                 <p> <i class="fa-solid fa-phone" style="color: white;"></i>  +1 247-982-4567</p>
